--- a/www/templates/ad/pull.html
+++ b/www/templates/ad/pull.html
@@ -3,7 +3,7 @@
         <single-title title="线边拉动"></single-title>
     </ion-header-bar>
     <ion-content>
-        <div style="width: 100%; display: block; position: absolute; left: 0; top: 0.5em; bottom: 3.5em;width: 100%;">
+        <div style="display: block; bottom: 3.5em; width: 100%; height: 100%;">
             <div class="clear pull" style="height: 100%; padding-top: 2em;">
                 <p ng-if="errorMsg" ng-bind="errorMsg"></p>
                 <div ng-repeat="m in menus" class="bz-menu col-3">
