--- a/www/templates/ad/login-dashboard.html
+++ b/www/templates/ad/login-dashboard.html
@@ -30,4 +30,9 @@
             </div>
         </div>
     </ion-content>
+    <ion-footer-bar>
+        <div class="quickNav">
+            <a href="#/ad/login"><span class="glyphicon glyphicon-log-out"></span></a>
+        </div>
+    </ion-footer-bar>
 </ion-view>
