--- a/www/templates/ad/login.html
+++ b/www/templates/ad/login.html
@@ -38,4 +38,7 @@
             </div>
         </div>
     </ion-content>
+    <div class="quickNav">
+        <a href="#/settings/"><span class="glyphicon glyphicon-cog"></span></a>
+    </div>
 </ion-view>
