--- a/www/templates/ad/member.html
+++ b/www/templates/ad/member.html
@@ -44,7 +44,7 @@
     <ion-footer-bar>
         <div class="quickNav">
             <a ng-click="loadList()"><span class="glyphicon glyphicon glyphicon-repeat"></span></a>
-            <a href="#/ad/pull"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
+            <a href="#/ad/sub-permssion"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
             <a href="#/login-dashboard"><span class="glyphicon glyphicon-home"></span></a>
             <a href="#/ad/login"><span class="glyphicon glyphicon-log-out"></span></a>
         </div>
