--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1575,7 +1575,7 @@ a.entry-home:hover {
 }
 
 .xiajia.content-wrapper table td.operation span:first-child {
-    background: #C2C2C2;
+    background: #149fdd;
 }
 
 .xiajia.content-wrapper table td.operation span:last-child {
