登录也跳转至设置页时，隐藏主页链接

--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -82,7 +82,7 @@
     
         <div class="quickNav">
             <a ng-click="back()"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
-            <a href="#/login-dashboard"><span class="glyphicon glyphicon-home"></span></a>
+            <a ng-hide="noHomeMenu" href="#/login-dashboard"><span class="glyphicon glyphicon-home"></span></a>
             <!-- <a href="#/settings/"><span class="glyphicon glyphicon-cog"></span></a> -->
         </div>
   </ion-footer-bar>
