--- a/www/templates/ad/login.html
+++ b/www/templates/ad/login.html
@@ -39,6 +39,6 @@
         </div>
     </ion-content>
     <div class="quickNav">
-        <a href="#/settings/"><span class="glyphicon glyphicon-cog"></span></a>
+        <a href="#/settings/?noHomeMenu=true"><span class="glyphicon glyphicon-cog"></span></a>
     </div>
 </ion-view>
