--- a/www/templates/ad/pull.html
+++ b/www/templates/ad/pull.html
@@ -7,7 +7,7 @@
             <div class="clear pull" style="height: 100%; padding-top: 2em;">
                 <p ng-if="errorMsg" ng-bind="errorMsg"></p>
                 <div ng-repeat="m in menus" class="bz-menu col-3">
-                    <a ng-click="pull(m)">
+                    <a ng-click="showConfirmPull(m)">
                         <div class="list card" ng-class="{active: m.isPulling}">
                             <div>
                                 <div>
