拉动弹框增加提示

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1811,6 +1811,9 @@ div.pull .bz-menu {
     padding: 1.5em;
 }
 
+div.pull .bz-menu .nickName {
+    display: block;
+}
 div.pull .bz-menu .itemCode {
     display: block;
     color: #159EDC;
