--- a/www/templates/ad/pull.html
+++ b/www/templates/ad/pull.html
@@ -14,6 +14,7 @@
                                     <span class="itemCode" ng-bind="m.itemCode"></span>
                                     <span class="routeCode" ng-bind="m.routeCode"></span>
                                     <span class="lsa" ng-bind="m.lsa"></span>
+                                    <span class="nickName" ng-bind="m.nickName"></span>
                                 </div>
                             </div>
                         </div>
