--- a/www/templates/kpi-group.html
+++ b/www/templates/kpi-group.html
@@ -1,31 +1,29 @@
 <ion-view hide-nav-bar="true" hide-back-button="true">
-	<ion-header-bar align-title="center">
-	  	<div></div>
-		<div class="title anji-theme" >
-			<div class="title-wp" style="background-image: url(img/LOG9.jpg);">
-				<div class=" logo-left"><img class="fl" src="img/dazhong.svg"/></div>
-				<div class="logo-right-wp"><img src="img/LOG9.jpg"/></div>
-				<div>
-					<div class="bold-title single-line">
+    <ion-header-bar align-title="center">
+        <div></div>
+        <div class="title anji-theme">
+            <div class="title-wp" style="background-image: url(img/LOG9.jpg);">
+                <div class=" logo-left"><img class="fl" src="img/dazhong.svg" /></div>
+                <div class="logo-right-wp"><img src="img/LOG9.jpg" /></div>
+                <div>
+                    <div class="bold-title single-line">
                         <span class="pageTitle">
-                            <span>KPI跟踪</span><br>
-                            ( <span class="subPageTitle" ng-bind="selectedCriteria.kuqu?selectedCriteria.kuqu.whse_code:''"></span>
-				  			<span class="subPageTitle" ng-if="!isLine" ng-bind="'-'+(selectedCriteria.banzu?selectedCriteria.banzu.description+'-':'')"></span>
-				  			<span class="subPageTitle" ng-if="!isLine" ng-bind="selectedCriteria.banci?selectedCriteria.banci.shift_code:''"></span>)
+                            <span>KPI跟踪</span>
+                        <br> ( <span class="subPageTitle" ng-bind="selectedCriteria.kuqu?selectedCriteria.kuqu.whse_code:''"></span>
+                        <span class="subPageTitle" ng-if="!isLine" ng-bind="'-'+(selectedCriteria.banzu?selectedCriteria.banzu.description+'-':'')"></span>
+                        <span class="subPageTitle" ng-if="!isLine" ng-bind="selectedCriteria.banci?selectedCriteria.banci.shift_code:''"></span>)
                         </span>
                     </div>
-				</div>
-			</div>
-
-		</div>
-	  	<div></div>
-	</ion-header-bar>
+                </div>
+            </div>
+        </div>
+        <div></div>
+    </ion-header-bar>
     <ion-content scroll="false">
-	    <div class="kpiGroup tc" style="position: absolute; width: 100%; height: 100%;">
-	    	<div class="center">
-
-	    		<!-- <img src="img/3.svg"> -->
-	        	<a ng-click="goDetail(kpi.type, kpi.PageType)" ng-repeat="kpi in kpis" class="kpi {{kpi.type}}">
+        <div class="kpiGroup five-menu tc" style="position: absolute; width: 100%; height: 100%;">
+            <div class="center">
+                <!-- <img src="img/3.svg"> -->
+                <!-- 	        	<a ng-click="goDetail(kpi.type, kpi.PageType)" ng-repeat="kpi in kpis" class="kpi {{kpi.type}}">
 	        		<div style="position: relative;">
 		        		<span ng-bind="kpi.name"></span>
 		        		<div style="    width: 100%; position: absolute; height: 1em; text-align: center; top: 0; left: 0;" ng-if="kpi.hatColor && kpi.hatColor!=''" class="hat">
@@ -33,15 +31,22 @@
 				        </div>
 				        <span ng-if="isLine" class="chargerName" ng-bind="metaData.LiablePerson"></span>
 	        		</div>
-	        	</a>
-	    	</div>
-	    </div>
-		<div class="quickNav" style="bottom: 0;">
-			<a ng-href="{{isLine? '#/view-board' :'#/dash'}}"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
-			<a href="#/login-dashboard"><span class="glyphicon glyphicon-home"></span></a>
-			<a href="#/settings/"><span class="glyphicon glyphicon-cog"></span></a>
-		</div>
+	        	</a> -->
+
+                <a ng-click="goDetail(kpi.type, kpi.PageType)" ng-repeat="kpi in kpis" class="kpi {{kpi.type}}">
+                    <div>
+                        <img ng-src="img/{{kpi.logo}}"/>
+                        <span ng-bind="kpi.name"></span>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="quickNav" style="bottom: 0;">
+            <a ng-href="{{isLine? '#/view-board' :'#/dash'}}"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
+            <a href="#/login-dashboard"><span class="glyphicon glyphicon-home"></span></a>
+            <a href="#/settings/"><span class="glyphicon glyphicon-cog"></span></a>
+        </div>
     </ion-content>
     <ion-footer-bar>
-	</ion-footer-bar>
+    </ion-footer-bar>
 </ion-view>
