库区字段显示调整

--- a/www/templates/garden.html
+++ b/www/templates/garden.html
@@ -10,7 +10,7 @@
             <div class="bold-title single-line">
                 <span class="pageTitle">
                     <span>班组园地</span><br>
-                    ( <span class="subPageTitle" ng-bind="selectedCriteria.kuqu?selectedCriteria.kuqu.whse_code:''"></span>
+                    ( <span class="subPageTitle" ng-bind="selectedCriteria.kuqu?selectedCriteria.kuqu.whse_name:''"></span>
                       <span class="subPageTitle" ng-if="!isLine" ng-bind="'-'+(selectedCriteria.banzu?selectedCriteria.banzu.description+'-':'')"></span>
                       <span class="subPageTitle" ng-if="!isLine" ng-bind="selectedCriteria.banci?selectedCriteria.banci.shift_code:''"></span>)
                 </span>
