--- a/www/templates/kqhz.html
+++ b/www/templates/kqhz.html
@@ -10,7 +10,7 @@
 			  			<div style="height: 100%; display: inline-block; position: relative;">
 				  			<span class="pageTitle">
 	                            <span>考勤汇总</span><br>
-	                            ( <span class="subPageTitle" ng-bind="selectedCriteria.kuqu.whse_code">仓库代码</span>
+	                            ( <span class="subPageTitle" ng-bind="selectedCriteria.kuqu.whse_name">仓库代码</span>
 								<span class="subPageTitle" ng-bind="'-'+selectedCriteria.banzu.description+'-'">班组</span>
 								<span class="subPageTitle" ng-bind="selectedCriteria.banci.shift_code">班次</span> )
 	                        </span>
