--- a/www/templates/org.html
+++ b/www/templates/org.html
@@ -15,7 +15,7 @@
                     <div class="bold-title single-line">
                         <span class="pageTitle">
                             <span>组织机构图</span><br>
-                            ( <span class="subPageTitle" ng-bind="selectedCriteria.kuqu.whse_code + '-'"></span>
+                            ( <span class="subPageTitle" ng-bind="selectedCriteria.kuqu.whse_name + '-'"></span>
                             <span class="subPageTitle"ng-bind="selectedCriteria.banzu.description"></span> )
                         </span>
                     </div>
