--- a/www/templates/cost-view-wall.html
+++ b/www/templates/cost-view-wall.html
@@ -9,7 +9,7 @@
 					<div class="bold-title single-line">
                         <span class="pageTitle">
                             <span>移动设备运行状态目视墙</span><br>
-                            ( <span class="subPageTitle" ng-bind="selectedCriteria.kuqu.whse_code"></span>
+                            ( <span class="subPageTitle" ng-bind="selectedCriteria.kuqu.whse_name"></span>
 							<span ng-if="!isLine" class="subPageTitle" ng-bind="'-'+selectedCriteria.banzu.description+'-'"></span>
 							<span ng-if="!isLine" class="subPageTitle" ng-bind="selectedCriteria.banci.shift_code"></span>)
                         </span>
