--- a/www/templates/flow-view-wall.html
+++ b/www/templates/flow-view-wall.html
@@ -9,7 +9,7 @@
 					<div class="bold-title single-line">
                         <span class="pageTitle">
                             <span>生产停线时间</span><br>
-                            ( <span class="subPageTitle" ng-bind="selectedCriteria.kuqu.whse_code"></span>
+                            ( <span class="subPageTitle" ng-bind="selectedCriteria.kuqu.whse_name"></span>
 							<span ng-if="!isLine" class="subPageTitle" ng-bind="'-'+selectedCriteria.banzu.description+'-'"></span>
 							<span ng-if="!isLine" class="subPageTitle" ng-bind="selectedCriteria.banci.shift_code"></span>)
                         </span>
@@ -34,7 +34,7 @@
 			<tbody>
 				<tr ng-repeat="r in records">
 					<td ng-bind="$index+1"></td>
-					<td ng-bind="r.whse_code"></td>
+					<td ng-bind="r.whse_name"></td>
 					<td ng-bind="r.dataweek"></td>
 					<td ng-bind="r.datadate"></td> <!-- 停线起止时间 -->
 					<td ng-bind="r.downtime"></td>
