--- a/www/templates/line-kpi-group.html
+++ b/www/templates/line-kpi-group.html
@@ -9,7 +9,7 @@
 					<div class="bold-title single-line">
                         <span class="pageTitle">
                             <span>KPI跟踪</span><br>
-                            (<span class="subPageTitle" ng-bind="selectedCriteria.kuqu?selectedCriteria.kuqu.whse_code+'-':''"></span>
+                            (<span class="subPageTitle" ng-bind="selectedCriteria.kuqu?selectedCriteria.kuqu.whse_name+'-':''"></span>
 				  			<span class="subPageTitle" ng-bind="selectedCriteria.banzu?selectedCriteria.banzu.description+'-':''"></span>
 				  			<span class="subPageTitle" ng-bind="selectedCriteria.banci?selectedCriteria.banci.shift_code:''"></span>)
                         </span>
