--- a/www/templates/gwrx.html
+++ b/www/templates/gwrx.html
@@ -8,10 +8,10 @@
 				<div>
 					<div class="bold-title single-line">
                         <span class="pageTitle">
-                            <span>岗位柔性表</span><br>
-                            ( <span class="subPageTitle" ng-bind="selectedCriteria.kuqu.whse_name">仓库代码</span>
-							<span class="subPageTitle" ng-bind="'-'+selectedCriteria.banzu.description+'-'">班组</span>
-							<span class="subPageTitle" ng-bind="selectedCriteria.banci.shift_code">班次</span> )
+                            <span>岗位柔性表</span>
+                            <span class="subPageTitle">( <span ng-bind="selectedCriteria.kuqu.whse_name">仓库代码</span>
+							<span ng-bind="'-'+selectedCriteria.banzu.description+'-'">班组</span>
+							<span ng-bind="selectedCriteria.banci.shift_code">班次</span> )</span>
                         </span>
                     </div>
 				</div>
