--- a/www/templates/kpi-chart.html
+++ b/www/templates/kpi-chart.html
@@ -23,10 +23,10 @@
                 <div>
                     <div class="bold-title single-line">
                         <span class="pageTitle">
-                            <span ng-bind="KPITitle"></span><br>
-                            ( <span class="subPageTitle" ng-bind="selectedCriteria.kuqu.whse_name"></span>
-                            <span class="subPageTitle" ng-if="!isLine" ng-bind="'-'+selectedCriteria.banzu.description"></span>
-                            <span class="subPageTitle" ng-if="!isLine" ng-hide="aspect=='member' || aspect=='quality'" ng-bind="'-'+selectedCriteria.banci.shift_code"></span>)
+                            <span ng-bind="KPITitle"></span>
+                            <span class="subPageTitle">( <span ng-bind="selectedCriteria.kuqu.whse_name"></span>
+                            <span ng-if="!isLine" ng-bind="'-'+selectedCriteria.banzu.description"></span>
+                            <span ng-if="!isLine" ng-hide="aspect=='member' || aspect=='quality'" ng-bind="'-'+selectedCriteria.banci.shift_code"></span>)</span>
                         </span>
                     </div>
                 </div>
