--- a/www/templates/org.html
+++ b/www/templates/org.html
@@ -14,9 +14,9 @@
                 <div>
                     <div class="bold-title single-line">
                         <span class="pageTitle">
-                            <span>组织机构图</span><br>
-                            ( <span class="subPageTitle" ng-bind="selectedCriteria.kuqu.whse_name + '-'"></span>
-                            <span class="subPageTitle"ng-bind="selectedCriteria.banzu.description"></span> )
+                            <span>组织机构图</span>
+                            <span class="subPageTitle">( <span ng-bind="selectedCriteria.kuqu.whse_name + '-'"></span>
+                            <span ng-bind="selectedCriteria.banzu.description"></span> )</span>
                         </span>
                     </div>
                 </div>
