--- a/www/templates/entry.html
+++ b/www/templates/entry.html
@@ -9,7 +9,7 @@
 				<div>
                     <div class="bold-title single-line">
                         <span class="pageTitle">
-                            <span>SFM现场管理信息系统</span><br>
+                            <span>SFM现场管理信息系统</span>
                             <span class="subPageTitle">ShopFloor Management System</span>
                         </span>
                     </div>
