--- a/www/templates/garden.html
+++ b/www/templates/garden.html
@@ -9,10 +9,10 @@
           <div>
             <div class="bold-title single-line">
                 <span class="pageTitle">
-                    <span>班组园地</span><br>
-                    ( <span class="subPageTitle" ng-bind="selectedCriteria.kuqu?selectedCriteria.kuqu.whse_name:''"></span>
-                      <span class="subPageTitle" ng-if="!isLine" ng-bind="'-'+(selectedCriteria.banzu?selectedCriteria.banzu.description+'-':'')"></span>
-                      <span class="subPageTitle" ng-if="!isLine" ng-bind="selectedCriteria.banci?selectedCriteria.banci.shift_code:''"></span>)
+                    <span>班组园地</span>
+                    <span class="subPageTitle">( <span ng-bind="selectedCriteria.kuqu?selectedCriteria.kuqu.whse_name:''"></span>
+                      <span ng-if="!isLine" ng-bind="'-'+(selectedCriteria.banzu?selectedCriteria.banzu.description+'-':'')"></span>
+                      <span ng-if="!isLine" ng-bind="selectedCriteria.banci?selectedCriteria.banci.shift_code:''"></span>)</span>
                 </span>
             </div>
           </div>
