--- a/www/templates/green-cross.html
+++ b/www/templates/green-cross.html
@@ -8,10 +8,10 @@
 				<div>
 					<div class="bold-title single-line">
                         <span class="pageTitle">
-                            <span>安全绿十字</span><br>
-                            ( <span class="subPageTitle" ng-bind="selectedCriteria.kuqu.whse_name">仓库代码</span>
-							<span class="subPageTitle" ng-if="!isLine" ng-bind="'-'+selectedCriteria.banzu.description">班组</span>
-							<span class="subPageTitle" ng-if="!isLine" ng-bind="'-'+selectedCriteria.banci.shift_code">班次</span>)
+                            <span>安全绿十字</span>
+                            <span class="subPageTitle">( <span ng-bind="selectedCriteria.kuqu.whse_name">仓库代码</span>
+							<span ng-if="!isLine" ng-bind="'-'+selectedCriteria.banzu.description">班组</span>
+							<span ng-if="!isLine" ng-bind="'-'+selectedCriteria.banci.shift_code">班次</span>)</span>
                         </span>
                     </div>
 				</div>
