--- a/www/templates/kpi-group.html
+++ b/www/templates/kpi-group.html
@@ -9,9 +9,9 @@
                     <div class="bold-title single-line">
                         <span class="pageTitle">
                             <span>KPI跟踪</span>
-                        <br> ( <span class="subPageTitle" ng-bind="selectedCriteria.kuqu?selectedCriteria.kuqu.whse_name:''"></span>
-                        <span class="subPageTitle" ng-if="!isLine" ng-bind="'-'+(selectedCriteria.banzu?selectedCriteria.banzu.description+'-':'')"></span>
-                        <span class="subPageTitle" ng-if="!isLine" ng-bind="selectedCriteria.banci?selectedCriteria.banci.shift_code:''"></span>)
+                        <span class="subPageTitle">( <span ng-bind="selectedCriteria.kuqu?selectedCriteria.kuqu.whse_name:''"></span>
+                        <span ng-if="!isLine" ng-bind="'-'+(selectedCriteria.banzu?selectedCriteria.banzu.description+'-':'')"></span>
+                        <span ng-if="!isLine" ng-bind="selectedCriteria.banci?selectedCriteria.banci.shift_code:''"></span>)</span>
                         </span>
                     </div>
                 </div>
