--- a/www/index.ejs
+++ b/www/index.ejs
@@ -34,5 +34,5 @@
       have templates inline in this html file if you'd like).
     -->
     <ion-nav-view name="dash"></ion-nav-view>
-  <script type="text/javascript" src="boundle.js"></script></body>
+  </body>
 </html>
