--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1985,3 +1985,6 @@ div.pull .bz-menu .list.card > div > div {
     background: #E6EBEF;
     color: #C2C9D2;
 }
+.kqhz table.lgjh td > span{
+    width: 100%;
+}
