--- a/www/css/style.css
+++ b/www/css/style.css
@@ -225,6 +225,11 @@ ion-view.view {
     width: 50%;
 }
 
+.col-3-2 {
+    width: 33.3%;
+    height: 46%;
+}
+
 .col-3 {
     width: 33.3%;
     height: 33.3%;
@@ -1611,7 +1616,7 @@ a.entry-home:hover {
 }
 
 .xiajia.content-wrapper table td {
-    padding: 2em 0.2em;
+    padding: 1em 0.2em;
     font-size: 1.2em;
 }
 
@@ -1630,10 +1635,10 @@ a.entry-home:hover {
 .xiajia.content-wrapper table td.operation span {
     display: inline-block;
     width: 45%;
-    height: 3em;
+    height: 4em;
     color: #FFF;
     border-radius: 0.2em;
-    line-height: 3em;
+    line-height: 4em;
 }
 
 .xiajia.content-wrapper table th.operation {
@@ -1863,6 +1868,11 @@ div.pull .bz-menu .nickName {
 div.pull .bz-menu .itemCode {
     display: block;
     color: #159EDC;
+    font-weight: bold;
+}
+
+div.pull .bz-menu .count {
+  display: block;
 }
 
 div.pull .bz-menu .routeCode {
