图表间距调整， 拉动提示

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1998,3 +1998,6 @@ div.pull .bz-menu .list.card > div > div {
 .kqhz table.lgjh td > span{
     width: 100%;
 }
+kao-qin-chart + kao-qin-chart > div {
+  margin-top: -1em;
+}
